<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Don8ion</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_username" tools:keep="@string/error_invalid_username">
        This is not a valid username.</string>
    <string name="error_incorrect_password">The username or password was incorrect.</string>
    <string name="error_field_required" tools:keep="@string/error_field_required">
        This field is required!</string>
    <string name="permission_rationale" tools:keep=
        "@string/permission_rationale">"Contacts permissions are needed for
        providing email completions."
    </string>
    <string name="no_account"><u>Don\'t have an account?</u></string>
    <string name="guest_login"><u>View Application as a Guest</u></string>

    <string name="title_activity_main" tools:keep="@string/title_activity_main">
        MainActivity</string>
    <string name="login">Login</string>
    <string name="cancel" tools:keep="@string/cancel">Cancel</string>
    <string name="create_account">Create an account</string>
    <string name="title_location_list">Locations</string>
    <string name="title_location_detail">Location Detail</string>
    <string name="app_label">BuzzTracker</string>
    <string name="search_hint_donations">Search donations</string>
    <string name="action_settings">Settings</string>
    <string name="home_page_title">Dashboard</string>
    <string name="location_tab_title">Locations</string>
    <string name="map_tab_title">Map</string>
    <string name="location_detail_title">Location Details</string>
    <string name="search_results">Search results</string>
    <string name="advanced_search">Advanced search</string>
    <string name="search">Search</string>
    <string name="admin_button">View Accounts</string>

    <!--New item strings-->
    <string name="category">Category</string>
    <string name="item_name">Item Name</string>
    <string name="item_desc">Item Description</string>
    <string name="price">Price</string>
    <string name="comments">Comments</string>
    <string name="create_donation">Create Donation</string>

    <!--Location detail strings-->
    <string name="view_inventory">View Inventory</string>

    <!--Registration strings-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="reg_create_account">Create account</string>

    <!--Search results strings-->
    <string name="no_results">Your search returned no results.</string>
</resources>
